--- a/_posts/2019-07-14-the-us-narrative-today.html
+++ b/_posts/2019-07-14-the-us-narrative-today.html
@@ -1559,107 +1559,107 @@ stories:
   domain: http://www.djc.com/
   link: https://www.djc.com/news/le/12123401.html
 images:
-- name: sand-hand-sand-hand-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crunch-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-alberto-giacometti.jpg
-- name: 35201856153_61bc075e4b-udnie.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-udnie.jpg
-- name: rockingchair-rockingchair-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smooth-ride.jpg
-- name: border-fence-border-fence-on-hill-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-bright-sand.jpg
-- name: windowmountain-window-mountain-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-rain.jpg
-- name: stories-new-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-beach-rocks-currents-kand-two.jpg
-- name: crow_clean_view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_clean_view.jpg
-- name: aws-s3-riverrapids-riverrapids-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-riverrapids-riverrapids-still-600.jpg
-- name: yuma-bank-yuma-bak-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-cinnamon-rolls.jpg
-- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
-- name: catacombs-catacombs-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-clean-view.jpg
-- name: oldcabin-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
-- name: yosemite-yosemite-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
-- name: power-lines-power-lines-empty-space-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-spagetti-accident.jpg
-- name: dc-statue-dcstatue-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-bright-sand.jpg
-- name: stories-downtown-fredericksburg-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-nazi-poster.JPG
-- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-- name: store-on-corner-store-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-pond.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
-- name: docks-docks-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-far-away.jpg
-- name: downtheline-downtheline-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-matrix.jpg
-- name: walled-garden-walled-garden-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-color.jpg
-- name: trucksilo-trucksilo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-aqua.jpg
-- name: stories-new-65-144-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-65-144-800-500-0-max-0-1--1.jpg
-- name: store-on-corner-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crabapple.jpg
-- name: oldhouse-oldhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-granite.jpg
-- name: fence-mexico-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-pablo-blue.jpg
-- name: catacombs-catacombs-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-rain.jpg
-- name: old-house-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-electricity.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-- name: carry-load-carryload-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-monet-one.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smoking-cigarette.jpg
-- name: oldtrain-oldtrain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dry-skin.jpg
-- name: yosemite-yosemite-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-graham-sutherland.jpg
-- name: old-barn-old-barn-1500-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-clean-view.jpg
-- name: miamibeach-miamibeach-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-space-pizza.jpg
-- name: beach-clouds-lifeguard-beachclouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kand-two.jpg
-- name: oldcabin-oldcabin-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-spagetti-accident.jpg
-- name: cargo-ship-cargo-ship-on-sea-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-clean-view.jpg
-- name: gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
-- name: trucksilo-trucksilo-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sunday.jpg
-- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
-- name: aws-s3-diamondcreek-diamondcreek-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-600.jpg
-- name: nazi-invasion-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4833.jpg
-- name: walled-garden-walled-garden-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purp-paper.jpg
-- name: dragon-desert-desert-dragon-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
-- name: old-gas-pumps-oldgaspumps-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colored-circuits.jpg
+- name: old-gas-pumps-oldgaspumps-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-blocks.jpg
+- name: mosaic-face-mosaic-face-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-jap-dys-1.jpg
+- name: death-valley-death-valley-national-park-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alien-goggles.jpg
+- name: containership-containership-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
+- name: cannon-facing-cannon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
+- name: old-church-oldchurch-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-post-modern.jpg
+- name: downtown-los-angeles-downtown-la-crunch-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crunch-paper.JPG
+- name: oldhouse-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
+- name: death-valley-death-valley-national-park-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colorful-dream.jpg
+- name: aws-s3-dunes-dunes-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-600.jpg
+- name: supreme-court-supremecourt-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-pond.jpg
+- name: amusement-park-amusement-park-2-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-wav-pr.jpg
+- name: machine-road-machine-road-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-mucha-mult.jpg
+- name: meadowbutterfly-meadow-butterfly-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colored-circuits.jpg
+- name: old-school-house-old-schoolhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-dream.jpg
+- name: server-cloud1-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
+- name: wind-mills-windmills-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dry-skin.jpg
+- name: server-cloud-server-racks-clouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-granite.jpg
+- name: oldcabin-store-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-plentiful.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-yellow-collage.jpg
+- name: legal-statue-legalstatue-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
+- name: white-house-lawn-white-house-lawn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
+- name: old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-oily-mcoilface.jpg
+- name: berlinwall-DSC-0084-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-deep-connections.jpg
+- name: old-granary-field-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-dream.jpg
+- name: server-cloud-server-racks-door-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kandinsky-bv.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+- name: gears-4882162452-fa3126b38d-b-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-monet-one.jpg
+- name: downtheline-downtheline-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-missle.jpg
 - name: stories-lincoln-consitution.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-lincoln-consitution.jpg
-- name: razorcliff-razorcliff-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-mucha-mult.jpg
+- name: catacombs-catacombs-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gan-vogh.jpg
+- name: eduardo-eduardo-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-two.jpg
+- name: old-granary-field-granaryfield-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
+- name: paris-paris-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-dali.jpg
+- name: old-granary-field-granaryfield-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-dresden.jpg
+- name: legal-statue-legalstatue-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-pablo-blue.jpg
+- name: abandonedbuildings_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sand_paper.jpg
+- name: white-house-lawn-white-house-window-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-rain.jpg
+- name: carry-load-carryload-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-two.jpg
+- name: stories-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-legalstatue-light-dali.jpg
+- name: old-school-house-old-schoolhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-post-modern.jpg
+- name: windowmountain-window-mountain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-far-away.jpg
+- name: ellis-island-ellisisland-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crafty-painting.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
+- name: mosaic-face-mosaic-face-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-pablo-blue.jpg
+- name: legal-statue-legalstatue-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-gred-mash.jpg
+- name: art-museum-art-museum-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
+- name: curtain-curtain-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alberto-giacometti.jpg
+- name: old-church-oldchurch-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-granite.jpg
+- name: downtheline-downtheline-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-bright-sand.jpg
 ---
 Harvey Reaps Benefits This Time As Angels Top Ms Again.&nbsp;Camden Wrestlers Advance To State Meet.&nbsp;Aspen Native With Dark Past Charged With Armed Robbery.&nbsp;Like Us On Facebook.&nbsp;Eagles Are Soaring Along James River.&nbsp;Olympic Silver Medalist Stevenson Wins In Jersey Hometown.&nbsp;Man Arrested Following South Lincoln Standoff.&nbsp;Sisters Graduate To Full Status As Indian Classical Dancers.&nbsp;
